# sysward

./: .gitignore  README.md  pyproject.toml
src/sysward/: __init__.py  __main__.py  app.py  theme.py
src/sysward/collectors/: base.py  battery.py  cpu.py  disk.py  fan.py  gpu.py  memory.py  network.py  process.py  sensors.py  sysinfo.py  systemd.py
src/sysward/models/: blacklist_entry.py  clean_item.py  config.py  history.py  profile.py
src/sysward/screens/: cleaner_screen.py  confirm_dialog.py  cpu_detail.py  disk_detail.py  fan_screen.py  memory_detail.py  network_detail.py  overview.py  process_screen.py  profile_screen.py  sysinfo_screen.py  systemd_screen.py
src/sysward/services/: alert_manager.py  collector_manager.py  disk_cleaner.py  exporter.py  fan_control.py  privilege.py  process_manager.py  profile_manager.py  session_logger.py
src/sysward/widgets/: cleaner_table.py  gauge.py  header_bar.py  hint_bar.py  line_chart.py  metric_card.py  process_table.py  service_table.py  usage_bar.py
