[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sysward"
version = "0.3.0"
description = "TUI system monitor & performance manager for Arch Linux"
requires-python = ">=3.11"
dependencies = [
    "textual>=1.0.0",
    "textual-plotext>=1.0.0",
    "rich>=13.0.0",
    "tomli_w>=1.0.0",
]

[project.scripts]
sysward = "sysward.__main__:main"
